fix inline black weird spacing for sub menu items

--- a/scss/custom/components/_menus.scss
+++ b/scss/custom/components/_menus.scss
@@ -42,6 +42,8 @@
 
     @include media-query(palm) { display: block;}
 
+    %menu__sub & { display: block;}
+
     & > a {
       display: block;
       color: $clr-primary;
